# bittorrent-rust

./: Cargo.toml  README.md
riptorrent/: Cargo.toml
riptorrent/src/: client.rs  database.rs  events.rs  lib.rs
riptorrent/src/core/: torrent.rs  tracker.rs
riptorrent/src/extensions/: factory.rs  mod.rs
riptorrent/src/extensions/magnet_links/: metadata_msg.rs  metadata_piece_manager.rs  mod.rs
riptorrent/src/messages/: mod.rs  payloads.rs
riptorrent/src/peer/: conn.rs  error.rs  event_loop.rs  extensions.rs  initial_handshake.rs  mod.rs
riptorrent/src/peer_manager/: error.rs  event_loop.rs  mod.rs  peer_fetcher.rs
riptorrent/src/peer_manager/piece_manager/: mod.rs  piece_selector.rs
src/: client.rs  database.rs  events.rs  lib.rs  main.rs  tracker.rs
src/core/: torrent.rs  tracker.rs
src/extensions/: protocol_extension_handshake.rs
src/extensions/magnet_links/: metadata_piece_manager.rs  mod.rs
src/messages/: payloads.rs
src/peer/: conn.rs  error.rs  event_loop.rs  extensions.rs  initial_handshake.rs  mod.rs
src/peer_manager/: error.rs  event_loop.rs  mod.rs  peer_fetcher.rs
src/peer_manager/piece_manager/: file_manager.rs  mod.rs  piece_selector.rs  req_preparer.rs
tui-app/: Cargo.toml
tui-app/src/: main.rs  model.rs  old_main.rs
tui-app/src/render_view/: add_new_torrent.rs  common.rs  logger.rs  mod.rs  torrent_list.rs
tui-app/src/update/: mod.rs  torrent_event.rs  user_input.rs
