[package]
name = "riptorrent"
version = "0.1.0"
authors = ["TheRedHell"]
edition = "2024"
resolver = "3"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
bytes = "1.11.0"                                                   # helps wrap responses from reqwest
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
rand = "0.9.2"
reqwest = "0.12.24"                                               # http requests
serde = { version = "1.0.228", features = ["derive"] }            # for json mangling
serde_bencode = "0.2.4"                                           # for bencode encoding/decoding
serde_bytes = "0.11.19"                                           # for dealing with bytes
serde_derive = "1.0.228"
serde_json = "1.0.145"                                            # for json mangling
serde_repr = "0.1.20"
sha1 = "0.10.6"                                                   # hashing
surrealdb = { version = "2.3.10", features = ["kv-rocksdb"] }
thiserror = "2.0.17"                                              # error handling
tokio = { version = "1.48.0", features = ["full"] }               # async http requests
tokio-util = { version = "0.7.17", features = ["full"] }
url = { version = "2.5.7", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["net", "time"] }
tracing = "0.1.41"
