[package]
name = "tui-app"
version = "0.1.0"
edition = "2024"
authors = ["TheRedHell"]
resolver = "3"

[dependencies]
riptorrent = { path = "../riptorrent" }
clap = { version = "4.5.51", features = ["derive"] }                # creating a cli
tokio = "1.48.0"
ratatui = "0.29.0"
color-eyre = "0.6.5"
url = "2.5.7"
tui-input = "0.14.0"
tui-logger = { version = "0.17.4", features = ["tracing-support"] }
tracing-subscriber = "0.3.20"
log = "0.4.28"
